[gd_scene load_steps=3 format=3 uid="uid://dgcscmok8h51i"]

[ext_resource type="Script" uid="uid://drj034ayuaque" path="res://scenes/wnd_browser.gd" id="1_q3mf3"]
[ext_resource type="PackedScene" uid="uid://dhjm5iedpepfd" path="res://scenes/image_list.tscn" id="2_oiot5"]

[node name="window" type="Window" groups=["Persist"]]
oversampling_override = 1.0
title = "Browser"
position = Vector2i(0, 36)
size = Vector2i(500, 500)
script = ExtResource("1_q3mf3")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Container" type="FoldableContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Container"]
layout_mode = 2

[node name="Button" type="Button" parent="HBoxContainer/Container/VBoxContainer"]
layout_mode = 2
text = "Create Directory"

[node name="Button2" type="Button" parent="HBoxContainer/Container/VBoxContainer"]
layout_mode = 2
text = "Delete Directory"

[node name="Button3" type="Button" parent="HBoxContainer/Container/VBoxContainer"]
layout_mode = 2
text = "Delete File"

[node name="Button4" type="Button" parent="HBoxContainer/Container/VBoxContainer"]
layout_mode = 2
text = "save settings"

[node name="Button5" type="Button" parent="HBoxContainer/Container/VBoxContainer"]
layout_mode = 2
text = "load settings"

[node name="HSplitContainer" type="HSplitContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
split_offset = 400

[node name="Tree" type="Tree" parent="HBoxContainer/HSplitContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="ImageList" parent="HBoxContainer/HSplitContainer" instance=ExtResource("2_oiot5")]
unique_name_in_owner = true
layout_mode = 2

[node name="FileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
oversampling_override = 1.0
title = "Open a File"
file_mode = 0
access = 2

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="size_changed" from="." to="." method="_on_size_changed"]
[connection signal="pressed" from="HBoxContainer/Container/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Container/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="HBoxContainer/Container/VBoxContainer/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="HBoxContainer/Container/VBoxContainer/Button5" to="." method="_on_button_5_pressed"]
[connection signal="item_collapsed" from="HBoxContainer/HSplitContainer/Tree" to="." method="_on_tree_item_collapsed"]
[connection signal="item_selected" from="HBoxContainer/HSplitContainer/Tree" to="." method="_on_tree_item_selected"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
